gitops/envs/conf-dso/apps/vault/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: vault
  name: vault-ingress
  namespace: dso-vault
spec:
  ingressClassName: nginx
  rules:
  - host: <path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.vault}>
    http:
      paths:
      - backend:
          service:
            name: conf-dso-vault-active
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.vault}>
    secretName: vault-tls-secret
